# goose-proxy

./: .coderabbit.yaml  .gitignore  .packit.yaml  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release-vendor.yml
data/development/goose/: config.yaml
data/development/goose/custom_providers/: custom_cla-proxy.json  custom_goose-proxy.json  rhel_cla.json
data/development/xdg/cla-proxy/: config.toml
data/development/xdg/goose-proxy/: config.toml
data/release/goose/: config.yaml  config.yml  custom_goose-proxy.json  goose-init.sh  rhel_cla.json
data/release/selinux/: Makefile  goose_proxy.fc  goose_proxy.if  goose_proxy.te
data/release/systemd/: 80-goose-proxy.preset  goose-proxy.service  goose-proxy.socket  goose-proxy.tmpfiles.conf
data/release/xdg/: config.toml
docs/: api-translation.md  packaging.md  systemd-hardening.md  testing.md
docs/man/: goose-proxy-config.rst  goose-proxy.rst
packaging/: constraints.txt  goose-proxy.spec  vendor-wheels.sh
src/goose_proxy/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  middleware.py  v1.py
src/goose_proxy/_vendor/: __init__.py
src/goose_proxy/models/: chat.py  responses.py
src/goose_proxy/routers/: health.py  v1.py
src/goose_proxy/translators/: __init__.py  request.py  response.py  streaming.py
tests/: test_cli.py  test_config.py  test_exceptions.py  test_middleware.py  test_models.py  test_v1.py  test_vendor.py
tests/routers/: test_v1.py
tests/translators/: test_request.py  test_response.py  test_streaming.py
