[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goose-proxy"
description = "A proxy that translates OpenAI Chat Completions API to Responses API for RHEL Lightspeed"
readme = "README.md"
dependencies = [
    # tomli is only required below 3.11 as it is native after that version.
    'tomli; python_version<"3.11"',
    # Exists in EPEL9/EPEL10
    "httpx>=0.28.1",
    # Both exists in EPEL9/EPEL10
    "pydantic>=2.12.4",
    # Exists in EPEL9/EPEL10
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.2",
]
requires-python = ">=3.9"  # RHEL 9 and 10
license-files = ["LICENSE"]
dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/rhel-lightspeed/goose-proxy"
"Bug Tracker" = "https://github.com/rhel-lightspeed/goose-proxy/issues"

[project.scripts]
goose-proxy = "goose_proxy.app:serve"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipdb",
    "ipython",
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]

docs = [
    "sphinx>=7.0,<8.0",
]

lint = [
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

test = [
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "pytest-mock",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = [
    "-r", "a",
    "--verbose",
    "--strict-markers",
    "--cov", "src",
    "--cov", "tests",
    "--cov-report", "html",
    "--cov-report", "term-missing:skip-covered",
    "--durations-min", "1",
    "--durations", "10",
    "--color", "yes",
    "--showlocals",
    "--pdbcls", "IPython.terminal.debugger:TerminalPdb",
]
asyncio_mode = "auto"
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "coverage/.data"
source = [
    "src",
    "tests",
]
omit = [
    ".venv/*"  # VS Code is including these files in reports for an unknown reason
]

[tool.coverage.html]
directory = "coverage/htmlcov"

[tool.coverage.json]
output = "coverage/coverage.json"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # import order (like isort)
    "C90",  # cyclomatic complexity
    "RUF100",  # unused-noqa
    "T20",  # flake8-print
]
mccabe.max-complexity = 12

ignore = [
    "E501",  # Ignore line length
]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ty.environment]
python-version = "3.9"
