[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goose-proxy"
description = "A proxy that translates OpenAI Chat Completions API to Responses API for RHEL Lightspeed"
authors = [
    { name = "RHEL Lightspeed Team", email = "rhel-sst-lightspeed@redhat.com" },
]
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
    # tomli is only required below 3.11 as it is native after that version.
    'tomli; python_version<"3.11"',
    "pydantic>=2.12.4",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "openai>=2.21.0",
    "httpx>=0.28",
]
# Python 3.9 is the minimum version available in RHEL 9, our lowest target.
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
"Source code" = "https://github.com/rhel-lightspeed/goose-proxy"
"Bug Tracker" = "https://github.com/rhel-lightspeed/goose-proxy/issues"

[project.scripts]
goose-proxy = "goose_proxy.cli:serve"

[tool.setuptools.dynamic]
version = {attr = "goose_proxy.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

# Include compiled extensions (.so) from vendored packages (e.g. pydantic_core).
# setuptools only includes .py files by default.
[tool.setuptools.package-data]
"*" = ["*.so"]

[dependency-groups]
dev = [
    "ipdb",
    "ipython",
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]

docs = [
    "sphinx>=7.0,<8.0",
]

lint = [
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

test = [
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = [
    "-r", "a",
    "--verbose",
    "--strict-markers",
    "--cov", "src",
    "--cov", "tests",
    "--cov-report", "html",
    "--cov-report", "term-missing:skip-covered",
    "--durations-min", "1",
    "--durations", "10",
    "--color", "yes",
    "--showlocals",
    "--pdbcls", "IPython.terminal.debugger:TerminalPdb",
]
asyncio_mode = "auto"
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "coverage/.data"
source = [
    "src",
    "tests",
    "src/goose_proxy/_vendor/__init__.py",
]
omit = [
    "src/goose_proxy/_vendor/*/*",
    ".venv/*",  # VS Code is including these files in reports for an unknown reason
]

[tool.coverage.html]
directory = "coverage/htmlcov"

[tool.coverage.json]
output = "coverage/coverage.json"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
extend-exclude = [
    "src/goose_proxy/_vendor/[!_]*",  # Exclude everything that doesn't start with _
    "src/goose_proxy/_vendor/_[!_]*", # Exclude item starting with a singe _
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # import order (like isort)
    "C90",  # cyclomatic complexity
    "RUF100",  # unused-noqa
    "T20",  # flake8-print
]
mccabe.max-complexity = 12

ignore = [
    "E501",  # Ignore line length
]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ty.src]
exclude = [
    "src/goose_proxy/_vendor/*/",
    "src/goose_proxy/_vendor/typing_extensions.py",
]

[tool.ty.environment]
python-version = "3.9"
